[tool.poetry]
name = "cps5"
version = "0.1.0"
description = ""
authors = ["w1vern <bndvvl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
pyside6 = "^6.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
